# eduplatform

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  config.py  docker-compose.yml  entrypoint.sh  pyproject.toml
eduplatform/: manage.py
eduplatform/eduplatform/: asgi.py  settings.py  urls.py  wsgi.py
eduplatform/mentorship/: admin.py  annotations.py  apps.py  backends.py  consts.py  endpoints.py  manager.py  mixins.py  models.py  serializers.py  tests.py  urls.py
eduplatform/mentorship/migrations/: 0001_create_user_model.py  0002_create_teacher_student_model.py  0003_change_teacher_student_models.py  0004_change_group_model.py  0005_create_topic_model.py
eduplatform/testing_system/: admin.py  apps.py  consts.py  endpoints.py  models.py  serializers.py  tests.py  urls.py
eduplatform/testing_system/migrations/: 0001_create_course_model.py  0002_create_topic_model.py  0003_create_article_model.py  0004_create_test_answertype_answer_question_models.py
